# onnxruntime_my_virtual_npu

./: check_onnxruntime_version.py  pre_package_cpp_sdk.sh  setup_custom_ort.sh  test_fastgelu_fix.py  test_mixed_providers.py  test_tiny_gpt2.py
DevDocs/: general_guides.txt
Releases/: Readme.txt
blog/: onnxruntime_custom_operator_development.md
cmake/: onnxruntime_providers_cpu.cmake  onnxruntime_unittests.cmake
docs/my_operators/: operator_implementation_plan.md
include/onnxruntime/core/graph/: constants.h
my_cpu/: BUILD_INTEGRATION.md  CMakeLists.txt  README.md
my_cpu/bert/: fast_gelu.cc
onnxruntime/core/graph/contrib_ops/: contrib_defs.h  my_virtual_npu_defs.cc
onnxruntime/core/providers/cpu/: cpu_execution_provider.cc
onnxruntime/core/providers/my_cpu/: BUILD_INTEGRATION.md  CMakeLists.txt  INTEGRATION.md  QUICKSTART.md  generate_test_data.py  my_cpu_kernels.cc  my_cpu_kernels.h  verify.bat  verify.sh
onnxruntime/core/providers/my_cpu/bert/: fast_gelu.cc  fast_gelu.h
onnxruntime/core/session/: environment.cc
onnxruntime/test/providers/my_cpu/: CMakeLists.txt  fast_gelu_op_test.cc
